# AaDS-4-lab

./: CMakeLists.txt
class/: binary_search_tree.cc  tree.cc
tests/: tree_tests.cc
